--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -1,5 +1,5 @@
 .Footer {
-  background-color: #1a1a1a;
+  background-color: #000000;
   color: #ffffff;
   padding: 40px 20px 20px;
   width: 100%;
@@ -8,14 +8,17 @@
 
 .TopFooter {
   display: flex;
-  justify-content: space-between;
+  justify-content:center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 30px;
   padding-bottom: 30px;
+  padding-left: 10vw;
+  padding-right: 10vw;
   border-bottom: 1px solid #333;
-  max-width: 1200px;
+  max-width: 100vw;
   margin: 0 auto;
+  background-color: red;
+  
 }
 
 .TopFooter .Logo {
@@ -24,23 +27,32 @@
 }
 
 .TopFooter .Links {
+  
   display: flex;
+  flex-direction: column;
   gap: 20px;
   flex-wrap: wrap;
   flex: 2;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  align-items:last center;
+  margin-left: 50px;
 }
 
 .TopFooter .link button {
-  background-color: transparent;
+  background-color: white;
   border: 1px solid #444;
-  color: #ffffff;
+  color: #000000;
   padding: 10px 20px;
-  border-radius: 5px;
+  padding-left: 20px;
+  border-radius: 9px;
+  width: 280px;
+  height: 3rem;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: poppins, sans-serif ;
   transition: all 0.3s ease;
-  white-space: nowrap;
+  /* white-space: nowrap; */
+   text-align: start;
 }
 
 .TopFooter .link button:hover {
@@ -140,3 +152,10 @@
     font-size: 11px;
   }
 }
+.Logo_footer{
+  width: 9rem;
+  height: 9rem;
+  object-fit: contain;
+}
+
+
