--- a/src/Style/Lander.css
+++ b/src/Style/Lander.css
@@ -9,7 +9,8 @@
     align-items: center;
     justify-content: space-between;
     height: 100vh;
-    padding: 0 5%;
+    padding-left: 4em ;
+    padding-right: 1em ;
     background-color: #1e1e1e;
 }
 
@@ -33,15 +34,14 @@
 .LanderContent .text {
     font-size: 3rem;
     font-weight: 700;
-    line-height: 1.2;
-    margin-bottom: 1rem;
+    /* line-height: 1.2; */
+    margin-bottom: 0.2rem;
 }
 
 .LanderContent .description {
     font-size: 0.95rem;
     color: #b0b0b0;
     line-height: 1.6;
-    margin-bottom: 1.5rem;
 }
 
 .HireMe {
@@ -49,7 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.6em 1.5em;
+    padding: 0.8em 1.5em;
     margin-top: 1em;
     background: linear-gradient(135deg, #a855f7 0%, #7c3aed 50%, #6366f1 100%);
     color: white;
@@ -82,15 +82,15 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
-    background-color: tomato;
+    /* background-color: tomato; */
 }
 
 .ImageContainer img {
     height: 38rem;
     object-fit: contain;
-    position: absolute;
+    position: relative;
     right: 0;
-    top: 0;
+    bottom: 8rem;
     filter: grayscale(0);
     z-index: 10;
 }
